manifestos-k8s/analytics-service/svc-analytics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics-service-svc
  namespace: analytics-service
spec:
  selector:
    app: analytics-service
  ports:
  - name: http
    port: 8005
    targetPort: 8005
