manifestos-k8s/analytics-service/ingress-analytics-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: analytics-service-ing
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: analytics-service-svc
              port:
                number: 80
